<resources>
    <string name="app_name">Weather test</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search</string>

    <string name="weather_api_key">46c6db58b61ac29d0c2986240b230924</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_detail">Forecast</string>
    <string name="title_activity_add_city">Add new city</string>
    <string name="morning_text_view_description">Morning</string>
    <string name="day_text_view_description">Day</string>
    <string name="evening_text_view_description">Evening</string>
    <string name="night_text_view_description">Night</string>
    <string name="pressure_description_text_view">Pressure</string>
    <string name="humidity_description_text_view">Humidity</string>
    <string name="wind_description_text_view">Wind</string>
    <string name="sunrise_description_text_view">Sunrise</string>
    <string name="sunset_description_text_view">Sunset</string>
    <string name="save_button_text">Save city</string>

    <string name="wind_units">Mps</string>

    <string name="title_activity_settings">Настройки</string>
    <string name="pressure_value_settings_title">Pressure units</string>
    <string name="pressure_value_settings_summary">Select pressure measure units</string>
    <string name="moscow_display_name">Moscow</string>
    <string name="sp_display_name">Saint Petersburg</string>
    <string name="add_city_edit_text_hint">Type new city</string>
    <string name="weather_icon_content_description">Weather icon</string>
    <string name="up_button_content_description">up button</string>
    <string name="voice_search_content_description">voice search button</string>
    <string name="empty_search_content_description">empty search</string>
    <string name="title_activity_map">Map</string>

    <string name="press_back_again_toast">Press back again to exit</string>
    <string name="main_drawer_item">Main</string>
    <string name="map_drawer_item">Map</string>
</resources>
