<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city_name_text_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_text_view"
        android:layout_below="@+id/temperature_text_view"
        android:layout_alignLeft="@+id/temperature_text_view"
        android:layout_alignStart="@+id/temperature_text_view"
        android:layout_marginTop="6dp"  />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/weather_icon_image_view"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/weather_icon_content_description"
        android:layout_below="@+id/city_name_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperature_text_view"
        android:layout_alignTop="@+id/weather_icon_image_view"
        android:layout_toRightOf="@+id/weather_icon_image_view"
        android:layout_toEndOf="@+id/weather_icon_image_view"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pressure_descr_text_view"
        android:text="@string/pressure_description_text_view"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/weather_icon_image_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pressure_text_view"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignTop="@+id/pressure_descr_text_view"
        android:layout_toRightOf="@+id/pressure_descr_text_view"
        android:layout_toEndOf="@+id/pressure_descr_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humidity_descr_text_view"
        android:text="@string/humidity_description_text_view"
        android:layout_below="@+id/pressure_descr_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humidity_text_view"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignTop="@+id/humidity_descr_text_view"
        android:layout_toRightOf="@+id/humidity_descr_text_view"
        android:layout_toEndOf="@+id/humidity_descr_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wind_descr_text_view"
        android:text="@string/wind_description_text_view"
        android:layout_below="@+id/humidity_descr_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wind_text_view"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignTop="@+id/wind_descr_text_view"
        android:layout_toRightOf="@+id/wind_descr_text_view"
        android:layout_toEndOf="@+id/wind_descr_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sunrise_descr_text_view"
        android:text="@string/sunrise_description_text_view"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/wind_descr_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sunrise_text_view"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignTop="@+id/sunrise_descr_text_view"
        android:layout_toRightOf="@+id/sunrise_descr_text_view"
        android:layout_toEndOf="@+id/sunrise_descr_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sunset_descr_text_view"
        android:text="@string/sunset_description_text_view"
        android:layout_below="@+id/sunrise_descr_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sunset_text_view"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignTop="@+id/sunset_descr_text_view"
        android:layout_toRightOf="@+id/sunset_descr_text_view"
        android:layout_toEndOf="@+id/sunset_descr_text_view" />

</RelativeLayout>